--- a/sql_filler.html
+++ b/sql_filler.html
@@ -7,19 +7,19 @@
 	<title>SQL Filler</title>
 </head>
 <body>
-	Добро пожаловать в SQL Filler 1.1! <br>
+	Добро пожаловать в SQL Filler 2.1! <br>
 	Эта форма позволит вам легко сгенерировать множество SQL-запросов для добавления в базу данных определённых записей.
-	<p>
+	<p/>
 	Важное замечание: чтобы заполнитель корректно работал с именами, необходимо, чтобы столбец с полом был перед столбцами с именем и/или фамилиями!
-	<p>
+	<p/>
 	В поле "правила генерации строк" введите N строк, где N - число столбцов в таблице. В каждой строке введите тип столбца и опции генерации
-	<p> Поддерживаемые типы (в квадратных скобках указаны параметры для опций):
-	<p> int - целое число. Опции: 
+	<p/> Поддерживаемые типы (в квадратных скобках указаны параметры для опций):
+	<p/> int - целое число. Опции: 
 		<ul>
 			<li> id [n] - последовательные целые числа, начиная с n (включительно). Если n не указан, то он считается равным 0</li> 
 			<li> rand [мин значение] [макс значение] - случайные числа от в интервале (включительно) </li>
 		</ul>
-	<p> str - строка. Не важно, какой у вас тип, CHAR или VARCHAR. По умолчанию строки заключены в одинарные кавычки. Чтобы их убрать, используйте openstr вместо str. Опции: 
+	<p/> str - строка. Не важно, какой у вас тип, CHAR или VARCHAR. По умолчанию строки заключены в одинарные кавычки. Чтобы их убрать, используйте параметр no_quotes. Чтобы изменить кавычки на двойные, используйте double_quotes. Опции: 
 		<ul>
 			<li>fixed [значение] - одно и то же значение</li>
 			<li>gender - возвращает значение 'M' или 'F', следущие вызовы для генерации имени и/или фамилии будут использовать это значение. </li>
@@ -27,12 +27,14 @@
 			<li>surname - фамилия (учитывает пол)</li>
 			<li>rand [n] - n случайных латинских букв</li>
 			<li>enum [1] [2] [3] ... [n] - строка со случайным значением из предложенных</li>
+			<li>no_quotes - можно комбинировать со всеми остальными. Не заключает сгенерированное значение в кавычки</li>
+			<li>double_quotes - заключает строки в двойные кавычки вместо одинарных</li>
 		</ul>
-	<p>date - дата. Опции:
+	<p/>date - дата. Опции:
 		<ul>
 			<li>rand [мин] [макс] - случайная дата между мин и макс</li>
 		</ul>
-	<p>
+	<p/>
 		js [имя функции] - правило для генерации задано в пользовательском JS-коде. Напишите функцию, возвращающую string, и укажите её имя в параметре [имя функции].<br>
 		<strong>Примечание:</strong> вы также можете использовать внутренние функции и переменные SQL Filler'a. Документацию по ним можно просмотреть, нажав <a href="javascript:showSelector('#sql-filler-inner-functions-docs');">здесь</a>	
 		<br>	
@@ -49,11 +51,11 @@
 			</ul>
 			<a href="javascript:hideSelector('#sql-filler-inner-functions-docs')">Скрыть</a>
 		</div>
-	</p>
 	
 	
-	<p><strong>Примечание:</strong> для генерации детерминированных значений или выбора из нескольких вариантов можно использовать тип (open)str вне зависимости от основного типа. Также можно использовать тип js с пользовательскими функциями. 
-	<p>
+	
+	<p/><strong>Примечание:</strong> для генерации детерминированных значений или выбора из нескольких вариантов можно использовать тип str вне зависимости от основного типа. Также можно использовать тип js с пользовательскими функциями. 
+	<p/>
 
 
 	<a href="javascript:showSelector('#examples')">Примеры</a>
@@ -64,15 +66,15 @@
 			str rand 15 - строка из 15 случайных латинских букв<br><br>
 			Заготовка для случаных имен и фамилий случайных людей:<br>str gender<br>str name<br>str surname<br>
 			<br>enum Ufa Kazan Moscow New-York Washington - случайное значение из вариантов: Ufa, Kazan, Moscow, New-York, Washington<br>
-			<p>
+			<p/>
 				Значение столбца будет вещественным числом между 0 и 1:<br>
 				Поле для ввода правил: <br> js func <p/>
-				Поле для ввода пользовательского JS: <br>function func() <br> { <br> &nbsp;&nbsp;&nbsp;&nbsp; return Math.random(); <br> } <p>
-			</p>
+				Поле для ввода пользовательского JS: <br>function func() <br> { <br> &nbsp;&nbsp;&nbsp;&nbsp; return Math.random(); <br> } <p/>
+			
 			<a href="javascript:hideSelector('#examples')">Скрыть примеры</a>
 	</div>
 
-	<p>
+	<p/>
 	<script type="text/javascript" src="scripts/sql_filler.js"></script>
 	<script type="text/javascript" src="scripts/names.js"></script>
 	<!-- <form name="sql-filler-form" onsubmit=""> -->
@@ -80,19 +82,20 @@
 		<br>Количество строк: <input type="text" name="row_count" id="row-count">
 		<br>Правила генерации строк: 
 		<br><textarea name="gen_rules" cols="40" rows="10" id="gen-rules"></textarea>
-		<p><button onclick="javascript:sqlFillerRun(); return false">Отправить</button>
+		<p/><button onclick="javascript:sqlFillerRun(); return false">Отправить</button>
 		<br>
 			<!-- <input type="reset" value="Очистить"> -->
 	</form>
 	<br>
-	<textarea id="result-memo" name="" cols="40" rows="10">Здесь будет отображен результат</textarea>
+	<textarea id="result-memo" name="" cols="40" rows="10" placeholder="Здесь будет отображен результат."></textarea>
 	<br>
-	<textarea id="user-js" cols="50" rows="25">Введите свои правила для генерации JS-строк здесь.</textarea>
+	<textarea id="user-js" cols="50" rows="25" placeholder="Введите свои правила для генерации JS-строк здесь."></textarea>
 
-	<p>
+	<p/>
 	История версий:
+	<br>2.1 (29 ноября 2019): убран тип openstr, вместо него добавлены новые параметры для str: no_quotes, double_quotes. Текстовые поля теперь используют placeholder вместо предварительного заполнения.
 	<br>2.0 (27 ноября 2019): добавлен тип js.
 	<br>1.1 (26 ноября 2019): добавлены типы: date, openstr. Добавлено больше имён и фамилий. Обновлена документация. Примеры теперь отображаются на странице вместо alert'a.
-	<br>1.0 (26 ноября 2019): начальная версия <p>
+	<br>1.0 (26 ноября 2019): начальная версия <p/>
 </body>
 </html>
