--- a/sql_filler.html
+++ b/sql_filler.html
@@ -19,7 +19,7 @@
 			<li> id [n] - последовательные целые числа, начиная с n (включительно). Если n не указан, то он считается равным 0</li> 
 			<li> rand [мин значение] [макс значение] - случайные числа от в интервале (включительно) </li>
 		</ul>
-	<p/> str - строка. Не важно, какой у вас тип, CHAR или VARCHAR. По умолчанию строки заключены в одинарные кавычки. Чтобы их убрать, используйте параметр no_quotes. Чтобы изменить кавычки на двойные, используйте double_quotes. Опции: 
+	<p/> str - строка. Не важно, какой у вас тип, CHAR или VARCHAR. По умолчанию строки заключены в одинарные кавычки. Чтобы их убрать, используйте параметр no_quotes. Чтобы изменить кавычки на двойные, используйте double_quotes. Название таблицы будет заключено в одинарные кавычки вне зависимости от выбранной опции. Для корректной работы опции no_quotes или double_quotes должны идти <strong>ПОСЛЕ</strong> всех остальных опций. Опции: 
 		<ul>
 			<li>fixed [значение] - одно и то же значение</li>
 			<li>gender - возвращает значение 'M' или 'F', следущие вызовы для генерации имени и/или фамилии будут использовать это значение. </li>
@@ -27,7 +27,7 @@
 			<li>surname - фамилия (учитывает пол)</li>
 			<li>rand [n] - n случайных латинских букв</li>
 			<li>enum [1] [2] [3] ... [n] - строка со случайным значением из предложенных</li>
-			<li>no_quotes - можно комбинировать со всеми остальными. Не заключает сгенерированное значение в кавычки</li>
+			<li>no_quotes - можно комбинировать со всеми остальными. Не заключает сгенерированное значение в кавычки.</li>
 			<li>double_quotes - заключает строки в двойные кавычки вместо одинарных</li>
 		</ul>
 	<p/>date - дата. Опции:
@@ -93,7 +93,7 @@
 
 	<p/>
 	История версий:
-	<br>2.1 (29 ноября 2019): убран тип openstr, вместо него добавлены новые параметры для str: no_quotes, double_quotes. Текстовые поля теперь используют placeholder вместо предварительного заполнения.
+	<br>2.1 (29 ноября 2019): убран тип openstr, вместо него добавлены новые параметры для str: no_quotes, double_quotes. Текстовые поля теперь используют placeholder вместо предварительного заполнения. Имя таблицы теперь всегда заключено в одинарные кавычки.
 	<br>2.0 (27 ноября 2019): добавлен тип js.
 	<br>1.1 (26 ноября 2019): добавлены типы: date, openstr. Добавлено больше имён и фамилий. Обновлена документация. Примеры теперь отображаются на странице вместо alert'a.
 	<br>1.0 (26 ноября 2019): начальная версия <p/>
