Updated design of version history

--- a/sql_filler.html
+++ b/sql_filler.html
@@ -94,10 +94,33 @@
 
 		<p/>
 		История версий:
-		<br>2.1 (29 ноября 2019): убран тип openstr, вместо него добавлены новые параметры для str: no_quotes, double_quotes. Текстовые поля теперь используют placeholder вместо предварительного заполнения. Имя таблицы теперь всегда заключено в одинарные кавычки. Изменен дизайн.
-		<br>2.0 (27 ноября 2019): добавлен тип js.
-		<br>1.1 (26 ноября 2019): добавлены типы: date, openstr. Добавлено больше имён и фамилий. Обновлена документация. Примеры теперь отображаются на странице вместо alert'a.
-		<br>1.0 (26 ноября 2019): начальная версия <p/>
+		<ul>
+			<li>2.1 (29 ноября 2019): 
+				<ul>
+					<li>убран тип openstr, вместо него добавлены новые параметры для str: no_quotes, double_quotes.</li> 
+					<li>Текстовые поля теперь используют placeholder вместо предварительного заполнения.</li>
+					<li>Имя таблицы теперь всегда заключено в одинарные кавычки. Изменен дизайн.</li>
+				</ul>
+			</li>
+
+			<li>2.0 (27 ноября 2019): 
+				<ul><li>добавлен тип js.</li></ul>
+			</li>
+
+			<li>1.1 (26 ноября 2019): 
+				<ul>
+					<li>добавлены типы: date, openstr.</li>
+					<li>Добавлено больше имён и фамилий. Обновлена документация.</li>
+					<li>Примеры теперь отображаются на странице вместо alert'a.</li>
+				</ul>
+			</li>
+
+			<li>1.0 (26 ноября 2019): 
+				<ul>
+					<li>начальная версия.</li>
+				</ul>
+			</li>
+		</ul>
 	</div>
 </body>
 </html>
