Renamed randomFromArr to anyOf

--- a/sql_filler.html
+++ b/sql_filler.html
@@ -43,7 +43,7 @@
 				<ul>
 					<li>function randomDate(start, end) - возвращает случайную дату в диапазоне [start,end]</li>
 					<li>function randomInt(low, high) - возвращает случайное целое число в диапазоне [low,high]</li>
-					<li>function randomFromArr(arr) - возвращает случайное значение из массива возможных вариантов</li>
+					<li>function anyOf(arr) - возвращает случайное значение из массива возможных вариантов</li>
 					<li>function quotes(s) - возвращает строку, обернутую в одинарные кавычки</li>
 					<li>var maleNames - массив, содержащий мужские имена</li>
 					<li>var femaleNames - массив, содержащий женские имена</li>
@@ -99,7 +99,9 @@
 				<ul>
 					<li>убран тип openstr, вместо него добавлены новые параметры для str: no_quotes, double_quotes.</li> 
 					<li>Текстовые поля теперь используют placeholder вместо предварительного заполнения.</li>
-					<li>Имя таблицы теперь всегда заключено в одинарные кавычки. Изменен дизайн.</li>
+					<li>Имя таблицы теперь всегда заключено в одинарные кавычки.</li>
+					<li>Изменен дизайн.</li>
+					<li>Функция randomFromArr переименована на anyOf.</li>
 				</ul>
 			</li>
 
